# ptouch2

./: Cargo.toml
src/: commands.rs  lib.rs  main.rs  printer.rs
src/render/: display.rs  mod.rs  ops.rs  qr_code.rs  qr_code_embedded_graphic.rs  text.rs
