[package]
name = "ql-raster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bitflags = "2.5.0"

embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"



num_enum = "0.7.2"
snmp = { version = "0.2.2", optional = true }
image = "0.25.1"
log = "0.4.22"
anyhow = "1.0.86"
embedded-layout = "0.4.1"

[features]
default = ["net"]
net = ["dep:snmp"]
